unpackaged/main/default/objects/ConsentSource__mdt/ConsentSource__mdt.object-meta.xml
<CustomObject>
    <label>Consent Source</label>
    <pluralLabel>Consent Sources</pluralLabel>
</CustomObject>