unpackaged/main/default/objects/ConsentSource__mdt/fields/capturePointType__c.field-meta.xml
<CustomField>
    <fullName>capturePointType__c</fullName>
    <label>CapturePointType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>