unpackaged/main/default/objects/ConsentSource__mdt/fields/captureSource__c.field-meta.xml
<CustomField>
    <fullName>captureSource__c</fullName>
    <label>CaptureSource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>