unpackaged/main/default/objects/ConsentSource__mdt/fields/OptoutPointType__c.field-meta.xml
<CustomField>
    <fullName>OptoutPointType__c</fullName>
    <label>OptoutPointType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>