unpackaged/main/default/objects/ConsentSource__mdt/fields/pointType__c.field-meta.xml
<CustomField>
    <fullName>pointType__c</fullName>
    <label>PointType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>