unpackaged/main/default/objects/ConsentSource__mdt/fields/subscriptionName__c.field-meta.xml
<CustomField>
    <fullName>subscriptionName__c</fullName>
    <label>SubscriptionName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>