unpackaged/main/default/objects/ConsentSource__mdt/fields/typeSource__c.field-meta.xml
<CustomField>
    <fullName>typeSource__c</fullName>
    <label>TypeSource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>